--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
-  " homepage": "https://muhammed-mukthar.github.io",
+  " homepage": "https://muhammed-mukthar.github.io/react-netflix-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
